--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Schubert Rodriguez Quezada",
+  "author": "scrodrig",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
